<resources>
    <string name="app_name">CrimeAlarm</string>
    <string name="button_addPlacemark">Add CrimeReport</string>
    <string name="hint_name">name or alias of the criminal</string>
    <string name="hint_placemarkDescription">Description </string>
    <string name="menu_addPlacemark">Add</string>
    <string name="menu_settings">Settings</string>
    <string name="menu_drawer">Drawer</string>

    <string name="menu_cancelPlacemark">Cancel</string>
    <string name="enter_criminal_name"> Please enter name/alias of criminal or unknown </string>
    <string name="save_placemark"> Save Crime report </string>
    <string name="button_addImage"> Add Image </string>
    <string name="select_placemark_image">Select placemark image</string>
    <string name="change_placemark_image">Change crime report image</string>
    <string name="button_location">Set Location</string>
    <string name="title_activity_map">Map</string>
    <string name="google_maps_key">AIzaSyCA3-3J7r7reMDZOAMbMmFvzW_rlPVe44g</string>
    <string name="content_description">image</string>
    <string name="title_login">LOGIN</string>
    <string name="et_hint_email_id">Email ID</string>
    <string name="et_hint_password">Password</string>
    <string name="lbl_forgot_password">Forgot Password?</string>
    <string name="btn_lbl_login">Login</string>
    <string name="don_t_have_an_account">Don\'t have an account?</string>
    <string name="register"><u>Register</u></string>
    <string name="create_an_account">CREATE AN ACCOUNT</string>

    <string name="hint_last_name">Last name</string>
    <string name="hint_first_name">First name</string>
    <string name="et_hint_confirm_password">Confirm Password</string>

    <string name="i_agree_to_the_terms_and_condition">I Agree To The <u> Terms &amp; Condition </u></string>
    <string name="btn_lbl_register">Register</string>

    <string name="already_have_an_account">Already have an account?</string>
    <string name="login"><u>Login</u></string>
    <string name="err_msg_enter_first_name">Please enter first name.</string>
    <string name="err_msg_enter_last_name">Please enter last name.</string>
    <string name="err_msg_enter_email">Please enter email.</string>
    <string name="err_msg_enter_password">Please enter password.</string>
    <string name="err_msg_enter_confirm_password">Please enter confirm password.</string>
    <string name="err_msg_password_and_confirm_password_mismatch">Password and confirm password does not match.</string>
    <string name="err_msg_agree_terms_and_condition">Please agree terms and condition.</string>
    <string name="please_wait">Please Wait&#8230;</string>
    <string name="title_forgot_password">FORGOT PASSWORD?</string>
    <string name="forgot_password_title_description">Enter your username and e-mail address we\'ll send you a email to reset your password</string>
    <string name="btn_lbl_submit">Submit</string>
    <string name="email_sent_success">\"Email sent successfully to reset your password! \"</string>

    <string name="title_activity_placemark_maps">Map of All Crime Reports </string>
    <string name="title_list">List of All Crime Reports </string>

    <string name="menu_deletePlacemark">Delete</string>
    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>
    <string name="button_signout">Sign out</string>
    <string name="hint_height">height of the criminal</string>
    <string name="hint_sex">sex of the criminal</string>
    <string name="hint_age">approximate age of the criminal</string>
    <string name="hint_date">date of the crime in DD/MM/YYYY</string>
    <string name="hint_time">time of the crime(please specify am/pm)</string>

    <string name="register_success">You are registered successfully.</string>

    <string name="title_complete_profile">COMPLETE PROFILE</string>
    <string name="et_hint_mobile_number">Mobile Number</string>
    <string name="rb_lbl_male">MALE</string>
    <string name="rb_lbl_female">FEMALE</string>
    <string name="btn_lbl_save">Save</string>
    <string name="read_storage_permission_denied">Oops, you just denied the permission for storage. You can also allow it from settings.</string>
    <string name="image_selection_failed">Image selection Failed!</string>
    <string name="err_msg_enter_mobile_number">Please enter mobile number.</string>
    <string name="msg_profile_update_success">Your profile is updated successfully.</string>
    <string name="title_settings">Settings</string>
    <string name="lbl_edit">Edit</string>
    <string name="lbl_addresses">Addresses</string>
    <string name="btn_lbl_logout">Logout</string>
    <string name="title_edit_profile">Edit Profile</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="action_share">Share</string>
    <string name="action_send">Send</string>
    <string name="group_communicate">Communicate</string>
    <string name="title_activity_drawer">DrawerActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>


</resources>