<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_menu_camera"
            android:title="@string/menu_home" />
        <item
            android:id="@+id/nav_gallery"
            android:icon="@drawable/ic_menu_gallery"
            android:title="@string/menu_gallery" />
        <item
            android:id="@+id/nav_slideshow"
            android:icon="@drawable/ic_menu_slideshow"
            android:title="@string/menu_slideshow" />
        <item
            android:id="@+id/item_add"
            android:icon="@android:drawable/ic_menu_add"
            android:title="@string/menu_addPlacemark"
            />
        <item
            android:id="@+id/item_list"
            android:icon="@android:drawable/ic_menu_sort_by_size"
            android:title="@string/title_list" />

        <item
            android:id="@+id/item_map"
            android:icon="@android:drawable/ic_menu_mapmode"
            android:title="@string/title_activity_placemark_maps" />
        <item
            android:id="@+id/item_settings"
            android:icon="@drawable/ic_vector_settings"
            android:title="@string/menu_settings"
            />


    </group>


</menu>