<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_home">

    <fragment
        android:id="@+id/nav_home"
        android:name="org.wit.crimealarm.activities.ui.home.HomeFragment"
        android:label="@string/menu_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/nav_gallery"
        android:name="org.wit.crimealarm.activities.ui.gallery.GalleryFragment"
        android:label="@string/menu_gallery"
        tools:layout="@layout/fragment_gallery" />

    <fragment
        android:id="@+id/nav_slideshow"
        android:name="org.wit.crimealarm.activities.ui.slideshow.SlideshowFragment"
        android:label="@string/menu_slideshow"
        tools:layout="@layout/fragment_slideshow" />
    <activity
        android:id="@+id/PlacemarkListActivity"
        android:name="org.wit.crimealarm.activities.PlacemarkListActivity"
        android:label="@string/title_activity_placemark_maps"
        tools:layout="@layout/activity_placemark_list" />

    <activity
        android:id="@+id/item_add"
        android:name="org.wit.crimealarm.activities.PlacemarkActivity"
        android:label="@string/menu_addPlacemark"
        tools:layout="@layout/activity_placemark" />
    <activity
        android:id="@+id/item_map"
        android:name="org.wit.crimealarm.activities.PlacemarkMapsActivity"
        android:label="@string/title_activity_placemark_maps"
        tools:layout="@layout/activity_placemark_maps" />
    <activity
        android:id="@+id/item_settings"
        android:name="org.wit.crimealarm.activities.SettingsActivity"
        android:label="@string/menu_settings"
        tools:layout="@layout/activity_settings" />

</navigation>